fix vertical alignment

--- a/assets/stylesheets/donations.scss
+++ b/assets/stylesheets/donations.scss
@@ -53,7 +53,6 @@
   display: inline-block;
   overflow: hidden;
   width: 16px;
-  height: 26px;
   text-indent: 16px;
   background: no-repeat left center;
 }
